# 2025_08.langchain.chilee

./: README.md  main.py  pyproject.toml
.cursor/rules/: langchain-class.mdc  test.mdc
lesson1/: lesson1-2.ipynb  lesson2-1.ipynb
lesson2/: lesson2-2.ipynb
lesson3/: lesson3-1.ipynb  lesson3-2.ipynb  lesson3-3.ipynb
lesson4/: AGENTS.md  lesson4-1.ipynb  lesson4-2.ipynb
lesson4/.gradio/flagged/: dataset1.csv
lesson_2/: lesson2-1.ipynb  lesson2-2.ipynb  lesson2-3.ipynb  lesson2-4.ipynb
link/: README.md
