[project]
name = "2025-08-langchain-chilee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",
    "python-dotenv>=1.1.1",
    "ipykernel>=6.30.1",
    "gradio>=5.46.1",
]
